feat: create wallet screen and displayed amount of coins
