# server/src/wallet/wallet.service.ts
@@ -2,6 +2,8 @@ import { Injectable } from '@nestjs/common';
 import { PrismaService } from '../prisma';
 import { validateWallet } from './utils';
 import { DailyAwardsService } from 'src/awards/awards.service';
+import { Prisma } from '@prisma/client';
+
 @Injectable()
 export class WalletService {
   constructor(
@@ -9,19 +11,25 @@ export class WalletService {
     private readonly awardsService: DailyAwardsService,
   ) {}
 
-  async balance(userId: string) {
-    const wallet = await this.prisma.wallet.findUnique({
-      where: { userId },
-    });
+  findOne(
+    where: Prisma.WalletWhereUniqueInput,
+    include?: Prisma.WalletInclude,
+  ) {
+    return this.prisma.wallet.findFirst({ where, include });
+  }
+
+  async findOneAndValidate(userId: string, include?: Prisma.WalletInclude) {
+    const wallet = await this.findOne({ userId }, include);
 
     validateWallet(wallet);
 
-    return wallet.balance;
+    return wallet;
   }
 
   async collectAward(userId: string) {
     const { isAwardExpired, award, currentTime, expirationTime } =
       await this.awardsService.checkAward(userId);
+
     const updatedWallet = isAwardExpired
       ? await this.awardsService.expiredAwardTransaction(award, currentTime)
       : await this.awardsService.updateAwardTransaction(award, currentTime);
